--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                 <div class="bot-avatar" id ="Articuno-avatar"></div>
                 <span>Articuno.AI</span>
             </div>
-            <!-- <div class="bot-item">
+            <div class="bot-item">
                 <div class="bot-avatar" id="gpt-4o-avatar"></div>
                 <span>GPT-4o</span>
             </div>
@@ -44,7 +44,7 @@
             <div class="bot-item">
                 <div class="bot-avatar" id ="recipe-queen-avatar"></div>
                 <span>Recipe Queen</span>
-            </div> -->
+            </div>
         </div>
 
         <!-- Platform Connection Status Section -->
